[package]
name = "vl53l7c-uld"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = []

# output selection (section 5.2)
# ST recommends keeping 'number of targets detected' 
# and 'target status' enabled
disable_ambient_per_spad = []
disable_nb_spads_enable = []
disable_nb_target_detected = []
disable_signal_per_spad = []
disable_range_sigma_mm = []
disable_target_status = []
disable_motion_indicator = []
disable_distance_mm = []
disable_reflectance_percent = []

[dependencies]

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.5"
